# AIGC-3DGS-Fusion-HW3-Q1

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: hw3_q1.yaml
slurm/: generate_object_b_threestudio.sbatch  generate_object_c_zero123.sbatch  render_fusion_demo.sbatch  train_background_3dgs.sbatch  train_object_a_3dgs.sbatch  train_real_3dgs_official_scene.sbatch
src/aigc_3dgs_fusion/: __init__.py  __main__.py  cli.py  config.py  demo_assets.py  geometry.py  metrics.py  planner.py  renderer.py
